--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@
 # URL base de la API del backend
 VITE_API_BASE_URL=http://localhost:5173
 
-# Para producción en Vercel, configurar:
+# IMPORTANTE PARA VERCEL:
+# Configura esta variable en Vercel → Settings → Environment Variables:
 # VITE_API_BASE_URL=https://tu-backend.railway.app
+#
+# Sin esta configuración, el frontend en producción no funcionará correctamente
