--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Ejemplo de variables de entorno
 # Copia este archivo como .env.local para desarrollo
 
-# URL base de la API del backend
-VITE_API_BASE_URL=http://localhost:5173
+# URL base de la API del backend de Railway
+VITE_API_BASE_URL=https://nessie-landingpage-waitlist-backend-production.up.railway.app
 
 # IMPORTANTE PARA VERCEL:
 # Configura esta variable en Vercel → Settings → Environment Variables:
-# VITE_API_BASE_URL=https://tu-backend.railway.app
+# VITE_API_BASE_URL=https://nessie-landingpage-waitlist-backend-production.up.railway.app
 #
-# Sin esta configuración, el frontend en producción no funcionará correctamente
+# Para desarrollo local, copia este archivo como .env.local
